// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ReusableSections DonateSection 1`] = `
<div
  className="Container secondary"
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(33, 48, 69, 0.65),rgba(33, 48, 69, 0.65)), url(https://s3.amazonaws.com/operationcode-assets/background_flag.jpg)",
    }
  }
>
  <div
    className="content"
  >
    <h3>
      Donate
    </h3>
    <p>
      As a 501(c)(3) veteran-led nonprofit organization, our programs and services are maintained through the efforts of our volunteer staff. Your financial support allows us to continue helping the military community learn software development, enter the tech industry, and code the future.
    </p>
    <p>
      Thank you for supporting our mission!
    </p>
    <a
      className="Button primary"
      href="https://secure.lglforms.com/form_engine/s/BRtP7QUKyHOyEYsZROsRew"
      onClick={[Function]}
    >
      Donate Now
    </a>
  </div>
</div>
`;

exports[`Storyshots ReusableSections JoinSection 1`] = `
<div
  className="Container white"
>
  <div
    className="content"
  >
    <h3>
      Join Our Thriving Community
    </h3>
    <p>
      Are you ready to begin your journey towards a career in software development?
      <br />
      Get the support you need by joining our members only Slack community!
    </p>
    <form
      noValidate={true}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="row"
      >
        <div
          className="field newsletterInput"
        >
          <span
            className="ScreenReaderOnly"
          >
            <label
              className="Label"
              htmlFor="email"
            >
              Email*
            </label>
          </span>
          <div
            className="inputFeedBackGrouping"
          >
            <input
              autoComplete="username email"
              className="input inputWithError"
              disabled={false}
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              type="email"
              value=""
            />
          </div>
        </div>
        <button
          className="Button newsletterButton primary"
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="submit"
        >
          Submit
        </button>
      </div>
      <div
        className="Alert success"
        role="alert"
      >
        
      </div>
      <div
        className="Alert error"
        role="alert"
      >
        
      </div>
    </form>
    <p>
      Slack is a community based collaboration tool where all the magic happens!
    </p>
    <a
      href="https://slack.com/"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="ScreenReaderOnly"
      >
        Opens in new window
      </span>
      Learn more
      <svg
        className="externalLinkIcon"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots ReusableSections SignUpSection 1`] = `
<div
  className="Container white"
>
  <div
    className="content"
  >
    <h3>
      New user?
    </h3>
    <p>
      Are you ready to deploy your future? Join Operation Code today and launch your career in software development. Once you complete the form below, you’ll be invited to join our team on Slack. Make sure you stop in and say hi!
    </p>
    <a
      className="Button secondary"
      href="/signup"
      onClick={[Function]}
    >
      Sign Up
    </a>
  </div>
</div>
`;
